<resources>
    <string name="app_name">TrashApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Admin</string>
    <string name="nav_header_subtitle">admin@trash.app</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_reports">All reports</string>
    <string name="menu_groups">All groups</string>
    <string name="menu_collecting_points">Trash Collecting Points</string>
    <string name="menu_users">All users</string>
    <string name="menu_companies">All cleaning companies</string>
    <string name="menu_vehicles">All cleaning vehicles</string>
    <string name="menu_workers">All workers</string>
    <string name="menu_roles">All roles</string>
    <string name="menu_account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_point_on_map">PointOnMapActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Point the trash</string>
    <string name="second_fragment_label">Trash details</string>
    <string name="next">Choose location</string>
    <string name="previous">Confirm</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="size_options">
        <item>Small</item>
        <item>Medium</item>
        <item>Big</item>
    </string-array>


</resources>