<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_map">

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.trashapp.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_reports"
        android:name="com.example.trashapp.ui.reports.ReportsFragment"
        android:label="@string/menu_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/nav_groups"
        android:name="com.example.trashapp.ui.groups.GroupsFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_groups" />

    <fragment
        android:id="@+id/nav_collecting_points"
        android:name="com.example.trashapp.ui.collectingpoints.CollectingPointsFragment"
        android:label="@string/menu_collecting_points"
        tools:layout="@layout/fragment_collecting_points" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.example.trashapp.ui.users.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_companies"
        android:name="com.example.trashapp.ui.companies.CompaniesFragment"
        android:label="@string/menu_companies"
        tools:layout="@layout/fragment_companies" />

    <fragment
        android:id="@+id/nav_vehicles"
        android:name="com.example.trashapp.ui.vehicles.VehicleFragment"
        android:label="@string/menu_vehicles"
        tools:layout="@layout/fragment_vehicles" />

    <fragment
        android:id="@+id/nav_workers"
        android:name="com.example.trashapp.ui.workers.WorkersFragment"
        android:label="@string/menu_workers"
        tools:layout="@layout/fragment_workers" />

    <fragment
        android:id="@+id/nav_roles"
        android:name="com.example.trashapp.ui.roles.RolesFragment"
        android:label="@string/menu_roles"
        tools:layout="@layout/fragment_roles" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.trashapp.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>